@@ -304,6 +304,7 @@ wxOSX:
 
 - Fix clipping when using Sonoma/Xcode 15 SDK (#23916, #24054, #24067, #24073).
 - Restore activation for non-bundled applications (#24056, #24062).
+- Fix wrong tooltips for cells with custom renderers in wxDataViewCtrl (#24370).
 
 wxQt:
 
